--- a/jobkarleapp/templates/FresherRigister.html
+++ b/jobkarleapp/templates/FresherRigister.html
@@ -69,8 +69,8 @@
       border-color:navy orange;
     }
 </style>
-<section style="position:relative; top:200px;">
-  <div class=" col-sm-8 m-auto">
+<section class="#e8eaf6 indigo lighten-5 pt-3" style="position:relative; top:130px;">
+  <div class=" col-sm-8 m-auto p-3">
 
 
     <!--Section: Content-->
@@ -150,10 +150,10 @@
       <div class="row text-center dark-grey-text">
   
         <div class="col-md-6 col-xl-3 mb-4">
-          <div class="card text-center bg-success text-white">
+          <div class="card text-center #f0f4c3 lime lighten-4 text-white">
             <div class="card-body">
-              <p class="mt-4 pt-2 card m-auto" style="width: max-content;"><i class="far fa-object-ungroup fa-4x"></i></p>
-              <h5 class="font-weight-normal my-4 py-2"><a class="text-white dark-grey-text" href="#">JOBS FOR YOU</a></h5>
+              <p class="mt-4 pt-2 card m-auto #cfd8dc blue-grey lighten-4" style="width: max-content;"><i class="far fa-object-ungroup fa-4x"></i></p>
+              <h5 class="font-weight-bold my-4 py-2" style="color:black;"><a href="#">JOBS FOR YOU</a></h5>
               <p class="mb-4">Stand out as an Early Applicant with instant access to jobs
                 Use SVCE Recruitments Application expert advantage to get handpicked jobs in your inbox </>
             </div>
@@ -161,10 +161,10 @@
         </div>
   
         <div class="col-md-6 col-xl-3 mb-4">
-          <div class="card text-center">
+          <div class="card text-center #b2ebf2 cyan lighten-4">
             <div class="card-body">
-              <p class="mt-4 pt-2 card m-auto" style="width: max-content;"><i class="fas fa-mobile-alt fa-4x grey-text"></i></p>
-              <h5 class="font-weight-normal my-4 py-2"><a class="dark-grey-text" href="#">Recruiters Search</a></h5>
+              <p class="mt-4 pt-2 card m-auto #ffca28 amber lighten-1" style="width: max-content;"><i class="fas fa-mobile-alt fa-4x grey-text"></i></p>
+              <h5 class="font-weight-bold my-4 py-2" style="color:black;"><a href="#">Recruiters Search</a></h5>
               <p class="text-muted mb-4">Not getting enough profile views?</p>
               <p class="text-muted mb-4">
 
@@ -174,20 +174,20 @@
         </div>
   
         <div class="col-md-6 col-xl-3 mb-4">
-          <div class="card text-center deep-purple lighten-1 text-white">
+          <div class="card text-center #e1bee7 purple lighten-4 text-white">
             <div class="card-body">
-              <p class="mt-4 pt-2 card m-auto" style="width: max-content;"><i class="fas fa-chart-line fa-4x"></i></p>
-              <h5 class="font-weight-normal my-4 py-2"><a class="text-white" href="#">Companys Info</a></h5>
+              <p class="mt-4 pt-2 card m-auto #ffab91 deep-orange lighten-3" style="width: max-content;"><i class="fas fa-chart-line fa-4x"></i></p>
+              <h5 class="font-weight-bold my-4 py-2" style="color:black;"><a href="#">Companys Info</a></h5>
               <p class="mb-4">SV Colleges tied with Multi National Companies and as well as StartUp Companies soo students can get all the information about they required comapnies </p>
             </div>
           </div>
         </div>
   
         <div class="col-md-6 col-xl-3">
-          <div class="card text-center">
+          <div class="card text-center #f8bbd0 pink lighten-4">
             <div class="card-body">
               <p class="mt-4 pt-2 card m-auto" style="width: max-content;"><i class="fas fa-bullhorn fa-4x grey-text"></i></p>
-              <h5 class="font-weight-normal my-4 py-2"><a class="dark-grey-text" href="#">Premium Package</a></h5>
+              <h5 class="font-weight-bold my-4 py-2" style="color:black;"><a href="#">Premium Package</a></h5>
               <p class="text-muted mb-4">Premium membership will only do the following: 1) Your profile visibility to employers will increase. 2) You will receive job offers at regular intervals through sms ...</p>
             </div>
           </div>
@@ -210,16 +210,153 @@
   
           <!-- <img src="{% static 'ibm-logo-2.png' %}" width="40" alt="My image"> -->
       <!-- Material form register -->
-      <div>
+      <!-- <div>
   
           <div>
               {% block companys %}
               {% include 'companys-img.html'%}
               {% endblock %}
           </div>
-          <!--Card content-->
+          Card content
+      </div> -->
+  <!-- Footer -->
+<footer class="page-footer font-small #d1c4e9 deep-purple lighten-4">
+
+  <!-- Footer Links -->
+  <div class="container text-center text-md-left">
+
+    <!-- Footer links -->
+    <div class="row text-center text-md-left mt-3 pb-3">
+
+      <!-- Grid column -->
+      <div class="col-md-3 col-lg-3 col-xl-3 mx-auto mt-3">
+        <div class="mt-3 mb-3" style="width: max-content;">
+          {% include 'logo.html' %}
+        </div>
+       
+        <p>Here you can use rows and columns to organize your footer content. Lorem ipsum dolor sit amet,
+          consectetur
+          adipisicing elit.</p>
       </div>
-  
+      <!-- Grid column -->
+
+      <hr class="w-100 clearfix d-md-none">
+
+      <!-- Grid column -->
+      <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mt-3">
+        <h6 class="text-uppercase mb-4 font-weight-bold">Products</h6>
+        <p>
+          <a href="#!">MDBootstrap</a>
+        </p>
+        <p>
+          <a href="#!">MDWordPress</a>
+        </p>
+        <p>
+          <a href="#!">BrandFlow</a>
+        </p>
+        <p>
+          <a href="#!">Bootstrap Angular</a>
+        </p>
+      </div>
+      <!-- Grid column -->
+
+      <hr class="w-100 clearfix d-md-none">
+
+      <!-- Grid column -->
+      <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mt-3">
+        <h6 class="text-uppercase mb-4 font-weight-bold">Useful links</h6>
+        <p>
+          <a href="#!">Your Account</a>
+        </p>
+        <p>
+          <a href="#!">Become an Affiliate</a>
+        </p>
+        <p>
+          <a href="#!">Shipping Rates</a>
+        </p>
+        <p>
+          <a href="#!">Help</a>
+        </p>
+      </div>
+
+      <!-- Grid column -->
+      <hr class="w-100 clearfix d-md-none">
+
+      <!-- Grid column -->
+      <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mt-3">
+        <h6 class="text-uppercase mb-4 font-weight-bold">Contact</h6>
+        <p>
+          <i class="fas fa-home mr-3"></i>SRI KALAHASTI,CHITTOOR,AP,INDIA</p>
+        <p>
+          <i class="fas fa-envelope mr-3"></i>abeedsk5dev@gmail.com</p>
+        <p>
+          <i class="fas fa-phone mr-3"></i> + 91 8897797817</p>
+        <p>
+          <i class="fas fa-print mr-3"></i> + 01 234 567 89</p>
+      </div>
+      <!-- Grid column -->
+
+    </div>
+    <!-- Footer links -->
+
+    <hr>
+
+    <!-- Grid row -->
+    <div class="row d-flex align-items-center">
+
+      <!-- Grid column -->
+      <div class="col-md-7 col-lg-8">
+
+        <!--Copyright-->
+        <p class="text-center text-md-left">© 2020 Copyright:
+          <a href="https://mdbootstrap.com/">
+            <strong> JOBKARLE.com</strong>
+          </a>
+        </p>
+
+      </div>
+      <!-- Grid column -->
+
+      <!-- Grid column -->
+      <div class="col-md-5 col-lg-4 ml-lg-0">
+
+        <!-- Social buttons -->
+        <div class="text-center text-md-right">
+          <ul class="list-unstyled list-inline">
+            <li class="list-inline-item">
+              <a class="btn-floating btn-sm rgba-white-slight mx-1">
+                <i class="fab fa-facebook-f"></i>
+              </a>
+            </li>
+            <li class="list-inline-item">
+              <a class="btn-floating btn-sm rgba-white-slight mx-1">
+                <i class="fab fa-twitter"></i>
+              </a>
+            </li>
+            <li class="list-inline-item">
+              <a class="btn-floating btn-sm rgba-white-slight mx-1">
+                <i class="fab fa-google-plus-g"></i>
+              </a>
+            </li>
+            <li class="list-inline-item">
+              <a class="btn-floating btn-sm rgba-white-slight mx-1">
+                <i class="fab fa-linkedin-in"></i>
+              </a>
+            </li>
+          </ul>
+        </div>
+
+      </div>
+      <!-- Grid column -->
+
+    </div>
+    <!-- Grid row -->
+
+  </div>
+  <!-- Footer Links -->
+
+</footer>
+<!-- Footer -->
   <!-- <div class="col-sm">
       <div class=" jobkarle-conditions ">
           <strong>Jobkarle Services you might be interested in</strong>
@@ -308,7 +445,7 @@
         <!--Header-->
         <div class="modal-header text-center pb-4">
           <h3 class="modal-title w-100 white-text font-weight-bold" id="myModalLabel"><strong>SIGN</strong> <a
-              class="green-text font-weight-bold"><strong> UP</strong></a></h3>
+              class="green-text font-weight-bold"><strong>IN</strong></a></h3>
           <button type="button" class="close white-text" data-dismiss="modal" aria-label="Close">
             <span aria-hidden="true">&times;</span>
           </button>
@@ -319,38 +456,34 @@
           <form action="{% url 'jobkarlepro:Login' %}" method="POST">
           {% csrf_token %}
           <div class="md-form mb-5">
-            <input type="text" id="Form-email5" name='username' class="form-control validate white-text">
+            <input type="text" id="Form-email5" name='username' class="form-control white-text">
             <label data-error="wrong" data-success="right" for="Form-email5">Your email</label>
           </div>
   
           <div class="md-form pb-3">
-            <input type="password" id="Form-pass5" name='password' class="form-control validate white-text">
+            <input type="password" id="Form-pass5" name='password' class="form-control white-text">
             <label data-error="wrong" data-success="right" for="Form-pass5">Your password</label>
           </div>
-            <div class="form-group mt-4">
-              <input class="form-check-input" type="checkbox" id="checkbox624">
-              <label for="checkbox624" class="white-text form-check-label">Accept the<a href="#" class="green-text font-weight-bold">
-                  Terms and Conditions</a></label>
-            </div>
+            
           <!--Grid row-->
-          <div class="row d-flex align-items-center mb-4">
+          <div class="row d-flex align-items-center mb-4 mt-0">
   
             <!--Grid column-->
-            <div class="text-center mb-3 col-md-12">
-              <button type="submit" class="btn btn-success btn-block btn-rounded z-depth-1">Sign up</button>
+            <div class="text-center mb-3 col-md-12 m-0">
+              <button type="submit" class="btn btn-success btn-block btn-rounded z-depth-1">Sign IN</button>
             </div>
             </form>
             <!--Grid column-->
+            <div class="col-md-12 m-0">
+              <p class="font-small white-text d-flex justify-content-end m-0">Forgot Password</p>
+            </div>
           </div>
-          <!--Grid row-->
-  
-          <!--Grid row-->
-          <div class="row">
+          <div class="row m-0">
   
             <!--Grid column-->
-            <div class="col-md-12">
-              <p class="font-small white-text d-flex justify-content-end">Have an account? <a href="#" class="green-text ml-1 font-weight-bold">
-                  Log in</a></p>
+            <div class="col-md-12 m-0">
+              <p class="font-small white-text d-flex justify-content-end m-0">if don't an account? <a href="#" class="green-text ml-1 font-weight-bold">
+                  Create</a></p>
             </div>
             <!--Grid column-->
   
@@ -369,60 +502,40 @@
   <div class="modal fade bd-example-modal-lg" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel"
     aria-hidden="true">
     <div class="modal-dialog modal-lg">
-  
       <div class="modal-content">
         <div class="row">
-      <div class="col-sm-6 companyback">
-        <div class="">
-        <div class="col-sm-2 m-auto">
-          <div class="modal-header">
-            <a href="#" ><img src="{% static 'company-register.png' %}" width="80" height="80" alt="avatar" class=" img-responsive"></a>
-          </div>
-        </div>
-        <div class="col-sm-10 p-2 ">
-          <div class="row">
-            <div class="col-sm">
-              <i class="fa fa-hand-o-left"></i>
+          <div class="col-sm-6 text-center #00bcd4 cyan">
+           <div class=" m-auto p-2">
+            <a href="#" class="m-auto" ><img src="{% static 'company-register.png' %}" width="80" height="80" alt="avatar" class=" img-responsive"></a>
+            <div class="text-center">
+              <a href="#" class="#e0e0e0 grey lighten-2 card m-auto p-1" id="company_button" style="width: max-content;">Companys</a>
+              <p class="p-1">We Help You Invent The Future</p>
             </div>
-            <div class="col-sm">
-              <a href="#" data-toggle="collapse" data-target=".multi1-collapse"
-          aria-expanded="false" aria-controls="multiCollapseExample1 multiCollapseExample2">Companys</a>
-            </div>
+           </div>
           </div>
-          <p>We Help You Invent The Future</p>
-  
-        </div>
-        </div>
-      </div>
-      <div class="col-sm-6">
-        <div class="">
-        <div class="col-sm-2 m-auto">
-          <div class="modal-header">
-            <a > <img src="{% static 'student-register.png' %}" width="80" height="80" alt="avatar" class=" img-responsive"></a>
+      <div class="col-sm-6 text-center #c0ca33 lime darken-1">
+        <div class=" m-auto p-2">
+          <a href="#" class="m-auto"><img src="{% static 'student-register.png' %}" width="80" height="80" alt="avatar" class=" img-responsive"></a>
+          <div class="text-center">
+            <a href="#" class="#e0e0e0 grey lighten-2 card m-auto p-1" id="student_button" style="width: max-content;">Students</a>
+            <p class="p-1">The Future Begins Here !</p>
           </div>
-        </div>
-        <div class="col-sm-10">
-          <a href="#" data-toggle="collapse" data-target=".multi-collapse"
-          aria-expanded="false" aria-controls="multiCollapseExample1 multiCollapseExample2">Students</a>
-          <p>The Future Begins Here !</p>
-        </div>
-        </div>
+         </div>
         </div>
       </div>
       <!-- Collapse buttons -->
   
   
   <!-- Collapsible content -->
-  <div class="row">
-    <div class="col-sm-12">
+<div class="row">
+    <div class="col-sm-12  cyan-text">
+      <div class="text-center" id="formjk" style="font-weight: bold; color:black;"></div>
     <div class="col">
-      <div class="collapse multi1-collapse animated zoomIn" id="multiCollapseExample1">
+      <div class="zoomIn" id="multiCollapseExample1">
         <div class="card-body">
           <form action="{% url 'jobkarlepro:CompanyRegister' %}" method="POST">
             {% csrf_token %}
             <input type="hidden" name="Fresher_id" id='Fresher_id' value="{{ forms.id }}">
-            <h3 style="background-color:black; color:white; padding:5px;"><strong>Companys Register</strong></h3>
-            <p>jobkarle is required avery field</p>
              <div>
               <div class="text-center" style="color: #757575;">
   
@@ -463,25 +576,13 @@
                     </small>
                 </div>
                 <div class="md-form">
-                  <input type="password" id="materialRegisterFormPassword" name="confirmpassword"class="form-control" aria-describedby="materialRegisterFormPasswordHelpBlock">
-                  <label for="materialRegisterFormPassword">confirmPassword</label>
-                  <small id="materialRegisterFormPasswordHelpBlock" class="form-text text-muted mb-4">
-                      At least 8 characters and 1 digit
-                  </small>
+                  <input type="password" id="materialRegisterFormPassword" id="SCpassword" name="confirmpassword" class="form-control" aria-describedby="materialRegisterFormPasswordHelpBlock">
+                  <label for="materialRegisterFormPassword">confirmPassword <p id="confirmSP"></p></label>
+                  
+                 
               </div>
-      
-      
-                <!-- Phone number -->
-                
-      
-                <!-- Newsletter -->
-                <div class="form-check">
-                    <input type="checkbox" class="form-check-input" id="materialRegisterFormNewsletter">
-                    <label class="form-check-label" for="materialRegisterFormNewsletter">Subscribe to our newsletter</label>
-                </div>
-      
                 <!-- Sign up button -->
-                <button class="btn btn-outline-info btn-rounded btn-block my-4 waves-effect z-depth-0" type="submit">Sign in</button>
+                <button class="btn btn-outline-info waves-effect" type="submit">Sign in</button>
       
                 <!-- Social register -->
                 <p>or sign up with:</p>
@@ -512,19 +613,17 @@
       </div>
     </div>
     </div>
-    <div class="col-sm-12">
+    <div class="col-sm-12  lime-text text-darken-1 n-0">
       <div class="col">
-        <div class="collapse multi-collapse animated zoomIn" id="multiCollapseExample2">
+        <!----collapse multi-collapse animated-->
+        <div class="zoomIn" id="multiCollapseExample2">
           <div class=" card-body">
             <form action="{% url 'jobkarlepro:FresherRigister' %}" method="POST">
               {% csrf_token %}
               <input type="hidden" name="Fresher_id" id='Fresher_id' value="{{ forms.id }}">
                <div>
              <!-- Material form register -->
-  <div>
-  
-    <h3 style="background-color:black; color:orange; padding:5px;"><strong>Student Register</strong></h3>
-  
+          <div>
     <!--Card content-->
     <div class="card-body px-lg-5 pt-0">
   
@@ -570,23 +669,11 @@
             <div class="md-form">
               <input type="password" id="materialRegisterFormPassword" name="confirmpassword"class="form-control" aria-describedby="materialRegisterFormPasswordHelpBlock">
               <label for="materialRegisterFormPassword">confirmPassword</label>
-              <small id="materialRegisterFormPasswordHelpBlock" class="form-text text-muted mb-4">
-                  At least 8 characters and 1 digit
-              </small>
+             
           </div>
   
-  
-            <!-- Phone number -->
-            
-  
-            <!-- Newsletter -->
-            <div class="form-check">
-                <input type="checkbox" class="form-check-input" id="materialRegisterFormNewsletter">
-                <label class="form-check-label" for="materialRegisterFormNewsletter">Subscribe to our newsletter</label>
-            </div>
-  
             <!-- Sign up button -->
-            <button class="btn btn-outline-info btn-rounded btn-block my-4 waves-effect z-depth-0" type="submit">Sign in</button>
+            <button class="btn btn-outline-info waves-effect" type="submit">Sign in</button>
   
             <!-- Social register -->
             <p>or sign up with:</p>
