--- a/jobkarleapp/templates/companybase.html
+++ b/jobkarleapp/templates/companybase.html
@@ -19,7 +19,7 @@
 <body class="body-imgset">
     <!--/.Navbar-->
     <section>
-    <nav class="navbar navbar-expand-lg base11 navbar-text-color ">
+    <nav class="navbar navbar-expand-lg base11 navbar-text-color #ede7f6 deep-purple lighten-5 ">
      {% include 'logo.html' %}
            
             <button class="navbar-toggler" data-toggle="collapse" data-target="#uiNavbar">
