--- a/jobkarleapp/templates/companypage.html
+++ b/jobkarleapp/templates/companypage.html
@@ -3,7 +3,7 @@
 <div class="companybg">
  
 </div>
-<section>
+<section class="container mt-5">
   <table class="table">
     <thead class="black white-text">
       <tr>
