--- a/jobkarleapp/static/static_css/media-quary.css
+++ b/jobkarleapp/static/static_css/media-quary.css
@@ -1,5 +1,9 @@
 
 @media (min-width: 500px) { 
+    #job_button_status{
+        position: relative;
+        left:100px;
+    }
     .base11{
         position:fixed;
         top:0px;
@@ -13,11 +17,14 @@
 
     }
     .search-box-input{
-
+        width: 85%;
     }
     
 }
 @media (max-width: 767px) { 
+    #job_button_status{
+        
+    }
     .main-profile{
         display: none;
     }
@@ -73,12 +80,13 @@
         margin: 200px;;
     }
     .dropdown-search{
-        width:400px;
+        width:85%;
 
     }
    
 }
 @media (max-width: 991px) {
+    
     .search-section{
         margin: 200px;;
     }
@@ -133,7 +141,7 @@
     }
     .apply-button{
         position: absolute;
-        right: 10px;
+        right: 50px;
     }
     .cdesc{
         font-size: 45px;
@@ -160,7 +168,7 @@
         top:100px;
     }
     .dropdown-search{
-        width:400px;
+        width:85%;
 
     }
     #logo-audgest{
@@ -172,6 +180,7 @@
 }
 
 @media (max-width: 1024px) {
+   
     #logo-audgest{
         position: relative;
         right: 20px;
@@ -198,7 +207,7 @@
         font-size: 10px;
     }
     #dropdown-search {
-        width:825px;
+        width:85%;
 
     }
     .search-box-input{
