--- a/jobkarleapp/templates/base.html
+++ b/jobkarleapp/templates/base.html
@@ -37,23 +37,7 @@
   top: -5px;
   z-index: 10;
 }
-.badge {
-  background: radial-gradient( 5px -9px, circle, white 8%, #ed2324 26px );
-  background: -moz-radial-gradient( 5px -9px, circle, white 8%, #ed2324 26px );
-  background: -ms-radial-gradient( 5px -9px, circle, white 8%, #ed2324 26px );
-  background: -o-radial-gradient( 5px -9px, circle, white 8%, #ed2324 26px );
-  background: -webkit-radial-gradient( 5px -9px, circle, white 8%, #ed2324 26px );
-  background-color: #ed2324;
-  border-radius: 50%;
-  width: 20px;
-  height: 20px;
-  text-align: center;
-  padding: 5% 5%;
-  position: relative;
-  right: 15px;
-  float: right;
-  display: block;
-}
+
 
 .message-count {
   position: relative;
@@ -116,6 +100,7 @@
       font-size: 30px;
       color: greenyellow;
       text-align: center;
+      margin: auto;
       font-family: sans-serif;
       font-weight: bold;
       transition: all .575s
@@ -326,7 +311,7 @@
                     {% if user.is_authenticated %}
                     {% else %}
                     <li class="nav-item">
-                      <a href="#"  data-toggle="modal" data-target=".bd-example-modal-lg" class="nav-link">
+                      <a href="#" id="register_button" data-toggle="modal" data-target=".bd-example-modal-lg" class="nav-link">
                            REGISTER</a>
                   </li>
                   {% endif %}
@@ -337,8 +322,8 @@
                   {% if profilepic %}
                   <li class="dropdown nav-link">
                     
-                       <a href="contact.html" class="nav-link dropdown-toggle card" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                          <i class="far fa-bell fa-1.5x animated swing" style="color: white;"></i>
+                       <a href="contact.html" class="nav-link dropdown-toggle" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                          <i class="far fa-bell fa-2x animated swing" style="color:#343A40;"></i>
                           {% if notification_unread %}
                           <div class="badge">
                             <div class="message-count">{{notification_count}}</div>
@@ -370,9 +355,10 @@
               <ul class="navbar-nav float-right">
                 {% if user.is_authenticated %}
                 <li class="nav-item dropdown-SEARCH">
-                  <input type="text" style="background-color:rgba rgba(255, 255, 255, 0.055);color:white;" class="main-input main-name" name="NAME" placeholder="Hover here for advanced search...." />
-                      <div class="dropdown-search p-4 " id="dropdown-search" style="position: absolute; top:38px;">
+                  <button class="card btn m-0 white" id="button_search" onclick="search_fun()"><i class="fas fa-binoculars fa-lg" id="binocular" style="color:#e6ee9c;"></i></button>                   
+                     <div class="dropdown-search p-4 d-none card " id="dropdown_search" style="position: absolute; top:50px;">
                         <div>
+                          <div class="float-right card p-2 btn #ffcc80 orange lighten-3 " onclick="close_search_modal()"><i class="fa fa-times fx-2" aria-hidden="true"></i></div>
                           <p><i class="fas fa-hiking c-white" style="width: min-content;"></i><strong style="color:black;"> My Stuff</strong></p></div>
                           <div class="row" style="width: 100%;">
                             <div class="col-xs-4 p-2 m-2">
@@ -413,7 +399,7 @@
                                 <i class="fas fa-binoculars fa-lg" style="color: yellow; padding:10px"></i><h1 style="padding:10px; font-weight: bold; color:yellow;">Find The Job That Fits Your Life</h1>
                               </div>
                              {% if user_data %}
-                              <div class="search-box-input">
+                              <div class="search-box-input" style="width: max-content;">
                               <form method="GET" action="{% url 'jobkarleapp:mulltisearch' user_data.id %}">
                               <input type="text" placeholder="Expected Role" name='role'>
                               <input type="text" placeholder="Location" name='location'>
@@ -425,7 +411,7 @@
                               {% endif %}
                             </div>
                           </div>
-                          <div id="bottom-serch" style="width:max-content; margin:auto; position:relative; top:200px;">
+                          <div id="bottom-serch" style="width:max-content; margin:auto; position:relative; top:100px;">
                             <h1  style=" font-weight: bold; color:white;">We Know That Some  Content is Not Working Will Update Soon To You </h1>
                             <h1>------------------------------------------------------------------------------------------------------</h1>
                             <div  style="position: absolute; right:0; width:max-content;">
@@ -471,33 +457,29 @@
       <section class="main-profile" style="width: max-content;">
         <div class="m-4 bi-profile" style="width: max-content; box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
         transition: 0.3s;">
-          <div class="card-header" style="background-color: cornflowerblue; height:35px;">
+          <div class="card-header #dcedc8 light-green lighten-4" style="height:35px;">
               <div class="float-right">
               <h4 id="status" class="status on">Online</h4>
               </div>
           </div>
-          <div class="card-body p-2" id="profilebg">     
+          <div class="card-body p-2 #9e9e9e grey">    <!--id="profilebg"  -->
             <img style="position:relative; bottom:25px;" class="card m-0 p-0" src="{{profilepic.Profile.url}}" width="50" height="50" class="rounded-circle img-responsive" alt="no profile">   
-            <a href="https://codepen.io/AlbertFeynman/" target="_blank">{{user_data.username}}</a>
+            <h4 class="lighten-5">{{user_data.username}}</h4>
          
           <div class="row p-2" style="padding-top: 0%;">
             <a class="card p-1 m-2" style="width: max-content; color:black; font-size:12px;  font-weight:bold;">Followers</a>
             <a class="card p-1 m-2" style="width: max-content; color:black; font-size:12px;  font-weight:bold;">Following</a>
           </div>
+          <p style="font-weight:bold;" class="m-auto">Skills</p>
           <div class="row" style="margin: auto;">
-            <a class="p-1 m-1 card" style="color: yellow; font-size:9px; background-color:rgba(21, 178, 202, 0.582)">PROJECTS</a>
-            <a class="p-1 m-1 card" style="color: yellow; font-size:9px; background-color:rgba(21, 178, 202, 0.582)">PENS</a>
-            <a class="p-1 m-1 card" style="color: yellow; font-size:9px; background-color:rgba(21, 178, 202, 0.582);">POSTS</a>
+            <a class="p-1 m-1 card" style="color: yellow; font-size:9px; background-color:rgba(21, 178, 202, 0.582)">{{user_qualification.Skills1}}</a>
+            <a class="p-1 m-1 card" style="color: yellow; font-size:9px; background-color:rgba(21, 178, 202, 0.582)">{{user_qualification.Skills2}}</a>
+            <a class="p-1 m-1 card" style="color: yellow; font-size:9px; background-color:rgba(21, 178, 202, 0.582);">{{user_qualification.Skills3}}</a>
           </div>
           <div class="row" style="margin: auto;">
-            <a class="p-1 m-1 card" style="color: white; font-size:9px; background-color:rgb(0, 7, 8);">PROJECTS</a>
-            <a class="p-1 m-1 card" style="color: white; font-size:9px; background-color:rgb(0, 7, 8);">PENS</a>
-            <a class="p-1 m-1 card" style="color: white; font-size:9px; background-color:rgb(0, 7, 8);">POSTS</a>
-          </div>
-          <div class="row" style="margin: auto;">
-            <a class="p-1 m-1 card" style="color: white; font-size:9px; background-color:rgb(0, 7, 8);">PROJECTS</a>
-            <a class="p-1 m-1 card" style="color: white; font-size:9px; background-color:rgb(0, 7, 8);">PENS</a>
-            <a class="p-1 m-1 card" style="color: white; font-size:9px; background-color:rgb(0, 7, 8);">POSTS</a>
+            <a class="p-1 m-1 card" style="color: white; font-size:9px; background-color:rgb(0, 7, 8);">{{user_qualification.Skills4}}</a>
+            <a class="p-1 m-1 card" style="color: white; font-size:9px; background-color:rgb(0, 7, 8);">{{user_qualification.Skills5}}</a>
+            <a class="p-1 m-1 card" style="color: white; font-size:9px; background-color:rgb(0, 7, 8);">{{user_qualification.Skills6}}</a>
           </div>
           </div>
         </div>
@@ -513,7 +495,7 @@
                   <div class="online-indicate-button"></div>
                 </div>
                 <div>
-                <h4 id="status" class="status on">Online</h4>
+                <!-- <h4 id="status" class="status on">Online</h4> -->
                 </div>
               </div>
             </div>
@@ -529,7 +511,9 @@
         {% endblock %}
     </section>
 
-    
+    <script>
+      
+    </script>
     <script>
       $('body').on('click','#id_country, #id_billing_country, #id_shipping_country', function(e) {
           //debugger
@@ -584,8 +568,44 @@ window.addEventListener('online', checking);
 window.addEventListener('offline', checking);
 </script>
 <script>
-  
+$(document).ready(function (){
+    console.log("working document.ready");
+  $(document).on("click","#company_button",function(){
+    console.log("working function");
+    $('#formjk').removeClass('#c0ca33 lime darken-1').text('STUDENT');
+    $('#formjk').addClass('#00bcd4 cyan').text('COMPANY');
+    $('#formjk').addClass('p-1');
+    $('#multiCollapseExample2').addClass('d-none');
+    $('#multiCollapseExample1').removeClass('d-none');
+   });
+   $(document).on("click","#student_button",function(){
+    console.log("working function");
+    $('#formjk').removeClass('#00bcd4 cyan').text('COMPANY');
+    $('#formjk').addClass('#c0ca33 lime darken-1').text('STUDENT');
+    $('#formjk').addClass('p-1');
+    $('#multiCollapseExample1').addClass('d-none');
+    $('#multiCollapseExample2').removeClass('d-none');
+   });
+   
+   $(document).on("click","#register_button",function(){
+    console.log("working function");
+    $('#multiCollapseExample1').addClass('d-none');
+    $('#multiCollapseExample2').addClass('d-none');
+   });
+   $('#SCpassword').on("keyup",function(){
+     Console.log('WORKING FUNCTION');
+    var password = $('#student_password').val();
+    var confirm_password = ('#SCpassword').val();
+    if(confirm_password === password){
+      $('#confirmSP').css('background-color:green;').text('PASSWORD CONFIRMED');
+    }
+    else{
+      $('#confirmSP').css('background-color:red;').text('WORNG CONFIRMATION');
+    }
+   });
+});
 </script>
+
   <!-- <script>
   
     $(window).on('load', function() {    
@@ -602,6 +622,8 @@ window.addEventListener('offline', checking);
     <script src="{% static 'bootstrap/js/bootstrap.min.js' %}"></script>
     <script src="{% static 'bootstrap/js/mdb.min.js' %}"></script> -->
     <!-- JQuery -->
+    <script rel="stylesheet" type="text/javascript" src="{% static 'static_css/main_tree.js' %}"></script>
+
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <!-- Bootstrap tooltips -->
     <script type="text/javascript"
